Location detail page works, still need to incorporate todo lists

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -99,6 +99,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVe_RKyLB57At8xcHL99vk8ySXRU8gm50"></script>
   <script src="map/new-location-directive.js"></script>
   <script src="viewloc/viewloc.js"></script>
+  <script src="locdetail/locdetail.js"></script>
   
 </body>
 </html>
