adjusted the todo list model, added the description field, changed the 'item' field to be the 'title'

--- a/frontend/app/locdetail/locdetail.html
+++ b/frontend/app/locdetail/locdetail.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col-md-offset-2 col-md-8" ng-repeat="todo in todos">
-            <p>{{todo.item}}</p>
+            <p>{{todo.title}}</p>
             <p>Due on: {{todo.due_date}}</p>
             <p ng-if="todo.completed"><b>Completed</b></p>
             <hr>
