--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
+      <!-- Collapsable nav bar -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -30,14 +30,14 @@
         <a class="navbar-brand" href="#/home">Home</a>
       </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
+      <!-- Collect the nav links for toggling -->
       <div class="collapse navbar-collapse" id="collapse-navbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="#">Placeholder Link <span class="sr-only">(current)</span></a></li>
           <li><a href="#/map">Create a location</a></li>
           <li><a href="#/viewloc">View all locations</a></li>
           <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Placeholder Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
               <li><a href="#">Another action</a></li>
@@ -49,16 +49,10 @@
             </ul>
           </li>
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
+          <li><a href="#">Empty Link</a></li>
           <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Placeholder Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
               <li><a href="#">Another action</a></li>
@@ -83,6 +77,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -92,8 +87,8 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="bootstrap/js/bootstrap.js"></script>
+  <script src="bootstrap/js/todo.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVe_RKyLB57At8xcHL99vk8ySXRU8gm50"></script>
   <script src="map/new-location-directive.js"></script>
   <script src="viewloc/viewloc.js"></script>
