--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -50,11 +50,11 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Empty Link</a></li>
+          <li><a href="#/login">Login</a></li>
           <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Placeholder Dropdown <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome {{User.info.username}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
+              <li><a href="#/logout">Logout</a></li>
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
@@ -81,15 +81,17 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="app.js"></script>
-  <script src="home/home.js"></script>
-  <script src="map/map.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
   <script src="bootstrap/js/bootstrap.js"></script>
   <script src="bootstrap/js/todo.js"></script>
+  <script src="auth/user_auth.js"></script>
+  <script src="auth/user_service.js"></script>
+  <script src="app.js"></script>
+  <script src="home/home.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVe_RKyLB57At8xcHL99vk8ySXRU8gm50"></script>
+  <script src="map/map.js"></script>
   <script src="map/new-location-directive.js"></script>
   <script src="viewloc/viewloc.js"></script>
   <script src="locdetail/locdetail.js"></script>
