--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -33,33 +33,21 @@
       <!-- Collect the nav links for toggling -->
       <div class="collapse navbar-collapse" id="collapse-navbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Placeholder Link <span class="sr-only">(current)</span></a></li>
+          <!--<li class="active"><a href="#">Placeholder Link <span class="sr-only">(current)</span></a></li>-->
           <li><a href="#/map">Create a location</a></li>
           <li><a href="#/viewloc">View all locations</a></li>
-          <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Placeholder Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#/login">Login</a></li>
-          <li><a href="#/register">Register</a></li>
-          <li class="dropdown">
+          <li ng-hide="user"><a href="#/login">Login</a></li>
+          <li ng-hide="user"><a href="#/register">Register</a></li>
+          <li class="dropdown" ng-show="user">
             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome {{user.username}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#/logout">Logout</a></li>
-              <li><a href="#">Another action</a></li>
+              <li><a href ng-click="logout()">Logout</a></li>
+              <!--<li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#">Separated link</a></li>-->
             </ul>
           </li>
         </ul>
