added family view. Can see the family details. Still need to implement join-family function

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -36,6 +36,7 @@
           <!--<li class="active"><a href="#">Placeholder Link <span class="sr-only">(current)</span></a></li>-->
           <li><a href="#/map">Create a location</a></li>
           <li><a href="#/viewloc">View all locations</a></li>
+          <li><a href="#/family">View your family</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li ng-hide="user"><a href="#/login">Login</a></li>
@@ -84,6 +85,7 @@
   <script src="map/new-location-directive.js"></script>
   <script src="viewloc/viewloc.js"></script>
   <script src="locdetail/locdetail.js"></script>
+  <script src="view_family/view_family.js"></script>
   
 </body>
 </html>
