--- a/frontend/app/locdetail/locdetail.html
+++ b/frontend/app/locdetail/locdetail.html
@@ -36,7 +36,7 @@
             <p>{{posted}}</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row" ng-show="lists.length > 0">
         <div class="col-sm-offset-3 col-sm-6">
             <h4>To-do lists</h4>
         </div>
