--- a/frontend/app/user_info/user_info.html
+++ b/frontend/app/user_info/user_info.html
@@ -15,17 +15,20 @@
                 <br>
                 <div ng-hide="user.info.family && user.info.phone_number">
                     <h4>Enter your user information: </h4>
-                    <form action="" method="post">
+                    <form method="post" class="form-group">
                         <div ng-hide="family" class="form-group">
                             <label>Family:</label>
                             <input type="text" ng-model="newfam.name" placeholder="Enter your family name here">
                         </div>
                         <div ng-hide="user.info.phone_number" class="form-group">
                             <label>Phone Number:</label>
-                            <input type="number" ng-model="phone_number" placeholder="Enter your phone number here">
+                            <input type="number" ng-model="new_info.phone_number" placeholder="Enter your phone number here">
                         </div>
                         <button ng-click="submit()">Join the family</button>
                     </form>
+                    <div>
+                        <p>{{success}}</p>
+                    </div>
                 </div>
             </div>
         </div>
