--- a/frontend/app/view_family/view_family.html
+++ b/frontend/app/view_family/view_family.html
@@ -7,8 +7,10 @@
             <div>
                 <p>Current family members:</p>
                 <div class="col-sm-offset-1">
-                    <p ng-repeat="member in members">
-                    Username: {{member.username}}, First Name: {{member.first_name}}</p>
+                    <div ng-repeat="member in members">
+                        <p>Username: {{member.username}}, First Name: {{member.first_name}} <br>
+                        <p class="col-sm-offset-1" ng-show="member.checkins">{{member.username}} has {{member.checkins.length}} Check-ins.</p>
+                    </div>
                 </div>
                 <p>This family currently has {{family.locations.length}} locations:</p>
                 <div class="col-sm-offset-1">
