--- a/frontend/app/viewloc/viewloc.html
+++ b/frontend/app/viewloc/viewloc.html
@@ -3,7 +3,8 @@
         <div class="col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-sm-10 col-md-10">
             <div class="row">
                 <div class="col-sm-offset-1 col-md-offset-1">
-                    <h2>This is where you will view the locations</h2>
+                    <h2>Family Locations</h2>
+                    <h3 ng-if="locations.length === 0">Your family doesn't have any locations yet</h3>
                 </div>
             </div>
             <div class="row">
