added family detail page

--- a/frontend/app/home/home.html
+++ b/frontend/app/home/home.html
@@ -1,13 +1,16 @@
-<div class="container">
+<div class="container-fluid home-page-title">
     <div class="row">
         <div class="col-md-offset-1 col-md-10">
             <h1>Welcome to Family Check-in!</h1>
         </div>
     </div>
+</div>
+<div class="container">
     <div class="row">
         <div class="col-md-offset-1 col-md-10">
-            <p>This mobile and web app has been designed to help you 
-            manage your time and stay connected to those most important to you.</p>
+            <p>This service has been designed to help you manage your time and stay connected to those most important to you.</p>
+            <p>With this web app, you can create locations and to-do lists, which can then be accessed on the mobile app.</p>
+            <p>With the mobile app installed, when you go to a location that has been created, the app will automatically ask you if you want to check-in at that location and will give you the to-do lists that were saved for that location.</p>
         </div>
     </div>
 </div>
