--- a/frontend/app/map/map.html
+++ b/frontend/app/map/map.html
@@ -16,7 +16,7 @@
                     <input type="text" ng-model="location.description" class="form-control" placeholder="eg. The middle school where the kids go." required>
                 </div>
                 <div class="form-group">
-                    <label>Location Radius</label>
+                    <label>Location Radius (in yards/meters)</label>
                     <input type="text" ng-model="location.radius" class="form-control" placeholder="The effective radius around the marker. e. 500" required>
                 </div>
                 <div class="row">
