--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -89,6 +89,7 @@
   <script src="viewloc/viewloc.js"></script>
   <script src="locdetail/locdetail.js"></script>
   <script src="view_family/view_family.js"></script>
+  <script src="view_family/family_detail/family_detail.js"></script>
   <script src="user_info/user_info.js"></script>
   
 </body>
