--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -65,9 +65,13 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
+  <div id="fb-root"></div>
   <div ng-view></div>
-
+  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+  </fb:login-button>
+  <div id="status">
+  </div>
+  <!--<fb:login-button show-faces="true" max-rows="1" size="large"></fb:login-button>-->
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
