facebook social auth is working now. Still need to implement google

--- a/frontend/app/auth/login.html
+++ b/frontend/app/auth/login.html
@@ -23,6 +23,10 @@
                     {{alert.msg}}
                 </div>
             </div>
+            <div>
+                <button ng-click="fblogin()"><img ng-src="auth/facebook.png" alt="facebook icon" class="login-icon"> Login with Facebook</button>
+            </div>
+             
         </div>
     </div>
 </div>
