fixed facebook social auth not asking for permissions, Facebook OAuth is fully functional

--- a/frontend/app/auth/login.html
+++ b/frontend/app/auth/login.html
@@ -26,7 +26,7 @@
             <div>
                 <button ng-click="fblogin()"><img ng-src="auth/facebook.png" alt="facebook icon" class="login-icon"> Login with Facebook</button>
             </div>
-             
+            <div id="status"></div>
         </div>
     </div>
 </div>
