Can manually add a new family member from a list of users without families. Also Implemented a family service to reduce server calls

--- a/frontend/app/view_family/view_family.html
+++ b/frontend/app/view_family/view_family.html
@@ -11,6 +11,13 @@
                         <p>Username: <a href="#/family/{{member.id}}/">{{member.username}}</a>, First Name: {{member.first_name}} <br>
                         <p class="col-sm-offset-1" ng-show="member.checkins">{{member.username}} has {{member.checkins.length}} Check-ins.</p>
                     </div>
+                    <div>
+                        <form method="post">
+                            <select ng-model="newfam" name="newfamselect" ng-options="person.username for person in available">
+                            </select>
+                            <button ng-click="add()">Add to the family</button>
+                        </form>
+                    </div>
                 </div>
                 <p>This family currently has {{family.locations.length}} locations:</p>
                 <div class="col-sm-offset-1">
