--- a/frontend/app/user_info/user_info.html
+++ b/frontend/app/user_info/user_info.html
@@ -19,6 +19,7 @@
                         <div ng-hide="family" class="form-group">
                             <label>Family:</label>
                             <input type="text" ng-model="newfam.name" placeholder="Enter your family name here">
+                            <p class="help-block">(Case sensitive)</p>
                         </div>
                         <button ng-click="submit()">Join the family</button>
                     </form>
