--- a/frontend/app/user_info/user_info.html
+++ b/frontend/app/user_info/user_info.html
@@ -19,9 +19,10 @@
                         <div ng-hide="family" class="form-group">
                             <label>Family:</label>
                             <input type="text" ng-model="newfam.name" placeholder="Enter your family name here">
-                            <p class="help-block">(Case sensitive)</p>
+                            <p class="help-block">(This is case sensitive)</p>
+                            <p class="help-block">If you would like to join a family, have a user who is in that family add you.</p>
                         </div>
-                        <button ng-click="submit()">Join the family</button>
+                        <button ng-click="submit()">Create a family</button>
                     </form>
                 </div>
                 <div ng-hide="user.info.phone_number">
