--- a/frontend/app/view_family/family_detail/family_detail.html
+++ b/frontend/app/view_family/family_detail/family_detail.html
@@ -17,7 +17,7 @@
                 <div ng-repeat="checkin in checkins" class="col-sm-offset-1">
                     <p>Check-in: {{checkin.start_time}}</p>
                     <p>Check-out: {{checkin.end_time}}</p>
-                    <p>Check-in location: {{checkin.location}}</p>
+                    <p>Check-in location: {{checkin.location.title}}</p>
                 </div>
             </div>
         </div>
