--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Family Check-in</title>
-    <meta name="description" content="">
+    <meta name="description" content="A family time and task management tool to help you get things done when and where you need to. Users can create and join families, then create locations and add to-do tasks to those locations. When using the mobile app, if a person checks in to a location, the to-do lists for that location are automatically pulled up for that user at that location.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
