--- a/frontend/app/user_info/user_info.html
+++ b/frontend/app/user_info/user_info.html
@@ -1,14 +1,15 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-offset-1 col-sm-10">
+        <h2>User Information Management</h2>
+        <h3>Username: {{user.username}}</h2>
+        <div class="col-sm-offset-1 col-sm-6">
             <div>
-                <h2>User Information Management</h2>
-                <h3>Username: {{user.username}}</h2>
                 <p>First Name: {{user.first_name}}</p>
                 <p>Last Name: {{user.last_name}}</p>
             </div>
             <div>
                 <p ng-show="user.info.phone_number">Phone Number: {{user.info.phone_number}}</p>
+                <p ng-show="user.email">Email Address: {{user.email}}</p>
                 <p ng-show="family">Family: {{family.name}}</p>
                 <img ng-src="{{user.info.profile_pic}}" alt="User's profile picture" ng-show="user.info.profile_pic" id="profile-pic">
                 <p ng-hide="family">Please join a family below</p>
@@ -43,6 +44,41 @@
                         </div>
                     </form>
                 </div>
+                <div>
+                    <button ng-click="showform()">Change/Update your information</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-5 user-update-form" visible="false">
+            <form method="put">
+                <div class="form-group">
+                    <label>First Name</label>
+                    <input type="text" ng-model="user.first_name" placeholder="John">
+                </div>
+                <div class="form-group">
+                    <label>Last Name</label>
+                    <input type="text" ng-model="user.last_name" placeholder="Doe">
+                </div>
+                <div class="form-group">
+                    <label>Email Address</label>
+                    <input type="email" ng-model="user.email" placeholder="your.email@domain.com">
+                </div>
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="text" ng-model="user.info.phone_number" placeholder="8881234567">
+                </div>
+                <button class="btn btn-default" ng-click="update()">Submit</button>
+            </form>
+            <div>
+                <p>{{text}}</p>
+            </div>
+            <div>
+                <form method="put" class="form-group">
+                    <div class="form-group">
+                        <label>Change/Update Your Profile Picture</label>
+                        <input id="new_pic" name="new_pic" type="file" accept="image/gif, image/x-png, image/jpeg, image/jpg" onchange="angular.element(this).scope().image_update()">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
