--- a/frontend/app/map/map.html
+++ b/frontend/app/map/map.html
@@ -23,8 +23,8 @@
                     <gmap class="marker-map" marker="marker">
                 </div>
                 <div class="form-group">
-                    <button class="btn" ng-click="submit()">Save</button>
-                    <button class="btn" ng-click="reset()">Reset</button>
+                    <button class="btn btn-default" ng-click="submit()">Save</button>
+                    <button class="btn btn-default" ng-click="reset()">Reset</button>
                     <h3>{{errors}}</h3>
                 </div>
             </form>
