--- a/frontend/app/user_info/user_info.html
+++ b/frontend/app/user_info/user_info.html
@@ -2,7 +2,7 @@
     <div class="row">
         <h2>User Information Management</h2>
         <h3>Username: {{user.username}}</h2>
-        <div class="col-sm-offset-1 col-sm-6">
+        <div class="col-sm-offset-1 col-sm-5">
             <div>
                 <p>First Name: {{user.first_name}}</p>
                 <p>Last Name: {{user.last_name}}</p>
@@ -11,7 +11,7 @@
                 <p ng-show="user.info.phone_number">Phone Number: {{user.info.phone_number}}</p>
                 <p ng-show="user.email">Email Address: {{user.email}}</p>
                 <p ng-show="family">Family: {{family.name}}</p>
-                <img ng-src="{{user.info.profile_pic}}" alt="User's profile picture" ng-show="user.info.profile_pic" id="profile-pic">
+                <img ng-src="{{user.info.profile_pic}}" alt="User's profile picture" ng-show="user.info.profile_pic" class="profile-pic">
                 <p ng-hide="family">Please join a family below</p>
                 <br>
                 <div ng-hide="user.info.family">
@@ -19,11 +19,10 @@
                     <form method="post" class="form-group">
                         <div ng-hide="family" class="form-group">
                             <label>Family:</label>
-                            <input type="text" ng-model="newfam.name" placeholder="Enter your family name here">
-                            <p class="help-block">(This is case sensitive)</p>
+                            <input type="text" ng-model="newfam.name" placeholder="Enter your family name here. (This is case sensitive)" class="form-control">
                             <p class="help-block">If you would like to join an existing family, please have a user who is in that family add you.</p>
                         </div>
-                        <button ng-click="submit()">Create a family</button>
+                        <button class="btn btn-default" ng-click="submit()">Create a family</button>
                     </form>
                 </div>
                 <div ng-hide="user.info.phone_number">
@@ -31,9 +30,9 @@
                     <form method="put" class="form-group">
                         <div ng-hide="user.info.phone_number" class="form-group">
                             <label>Phone Number:</label>
-                            <input type="number" ng-model="user_info.phone_number" placeholder="Enter your phone number here">
+                            <input type="number" ng-model="user_info.phone_number" placeholder="Enter your phone number here" class="form-control">
                         </div>
-                        <button ng-click="info()">Update your phone number</button>
+                        <button class="btn btn-default" ng-click="info()">Update your phone number</button>
                     </form>
                 </div>
                 <div ng-hide="user.info.profile_pic">
@@ -45,33 +44,33 @@
                     </form>
                 </div>
                 <div>
-                    <button ng-click="showform()">Change/Update your information</button>
+                    <button class="btn btn-default" ng-click="showform()">Change/Update your information</button>
+                </div>
+                <div>
+                    <p>{{text}}</p>
                 </div>
             </div>
         </div>
-        <div class="col-sm-5 user-update-form" visible="false">
+        <div class="col-sm-offset-1 col-sm-5 user-update-form" visible="false">
             <form method="put">
                 <div class="form-group">
                     <label>First Name</label>
-                    <input type="text" ng-model="user.first_name" placeholder="John">
+                    <input type="text" ng-model="user.first_name" placeholder="John" class="form-control">
                 </div>
                 <div class="form-group">
                     <label>Last Name</label>
-                    <input type="text" ng-model="user.last_name" placeholder="Doe">
+                    <input type="text" ng-model="user.last_name" placeholder="Doe" class="form-control">
                 </div>
                 <div class="form-group">
                     <label>Email Address</label>
-                    <input type="email" ng-model="user.email" placeholder="your.email@domain.com">
+                    <input type="email" ng-model="user.email" placeholder="your.email@domain.com" class="form-control">
                 </div>
                 <div class="form-group">
                     <label>Phone Number</label>
-                    <input type="text" ng-model="user.info.phone_number" placeholder="8881234567">
+                    <input type="text" ng-model="user.info.phone_number" placeholder="8881234567" class="form-control">
                 </div>
                 <button class="btn btn-default" ng-click="update()">Submit</button>
             </form>
-            <div>
-                <p>{{text}}</p>
-            </div>
             <div>
                 <form method="put" class="form-group">
                     <div class="form-group">
