--- a/frontend/app/viewloc/viewloc.html
+++ b/frontend/app/viewloc/viewloc.html
@@ -12,7 +12,7 @@
                     <locmap class="marker-map" points="points" title="title">
                 </div>
             </div>
-            <div class="row" ng-repeat="location in locations">
+            <div class="row" ng-repeat="location in locations | orderBy: 'title'">
                 <div class="row">
                     <div class="col-sm-offset-1 col-sm-3 col-md-3">
                         <p><b><a ng-href="#/viewloc/{{location.id}}/">{{location.title}}</a></b></p>
