The geolocation is working with addreses. Still implementing the click function along with the address location function

--- a/frontend/app/viewloc/viewloc.html
+++ b/frontend/app/viewloc/viewloc.html
@@ -25,3 +25,4 @@
         </div>
     </div>
 </div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVe_RKyLB57At8xcHL99vk8ySXRU8gm50&signed_in=true&callback=initMap" async defer></script>
