--- a/frontend/app/map/map.html
+++ b/frontend/app/map/map.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-offset-1 col-md-10">
             <h2>Create a new location</h2>
+            <h4>You can mark the location on the map by either seraching the address or by clicking on the map.</h4>
         </div>
     </div>
     <div class="row">
@@ -19,13 +20,16 @@
                     <label>Location Radius (in yards/meters)</label>
                     <input type="text" ng-model="location.radius" class="form-control" placeholder="The effective radius around the marker. e. 500" required>
                 </div>
-                <div class="row">
-                    <gmap class="marker-map" marker="marker">
-                </div>
-                <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" id="address" value="Salt Lake City, UT" class="form-control">
+                    <input id="submit" type="button" value="Search" class="btn btn-default">
                     <button class="btn btn-default" ng-click="submit()">Save</button>
                     <button class="btn btn-default" ng-click="reset()">Reset</button>
-                    <h3>{{errors}}</h3>
+                    <gmap class="marker-map" marker="marker" id="gmap">
+                <div class="row">
+                    <div class="form-group">
+                        <h3>{{errors}}</h3>
+                    </div>
                 </div>
             </form>
         </div>
