Finished geolocation integration. Addresses and click events now place a marker

--- a/frontend/app/map/map.html
+++ b/frontend/app/map/map.html
@@ -18,14 +18,19 @@
                 </div>
                 <div class="form-group">
                     <label>Location Radius (in yards/meters)</label>
-                    <input type="text" ng-model="location.radius" class="form-control" placeholder="The effective radius around the marker. e. 500" required>
+                    <input type="number" ng-model="location.radius" class="form-control" placeholder="The effective radius around the marker. For example '500'" required>
+                    <p class="help-block">Numbers only</p>
                 </div>
+                <div class="form-group">
                     <label>Address</label>
-                    <input type="text" id="address" value="Salt Lake City, UT" class="form-control">
-                    <input id="submit" type="button" value="Search" class="btn btn-default">
+                    <input type="text" id="address" placeholder="350 State St, Salt Lake City, UT 84111" class="form-control">
+                    <input id="geolocate" type="button" value="Search" class="btn btn-default">
+                    <gmap class="marker-map" marker="marker" id="gmap">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-default" ng-click="submit()">Save</button>
                     <button class="btn btn-default" ng-click="reset()">Reset</button>
-                    <gmap class="marker-map" marker="marker" id="gmap">
+                </div>
                 <div class="row">
                     <div class="form-group">
                         <h3>{{errors}}</h3>
